--- a/.github/workflows/checking.yml
+++ b/.github/workflows/checking.yml
@@ -27,4 +27,4 @@ jobs:
           LT_USERNAME: ${{ secrets.LT_USERNAME }}
           LT_ACCESS_KEY: ${{ secrets.LT_ACCESS_KEY }}
         run: |
-          python -m unittest your_test_file.py
+          python lambdatest.py
